DUTCH: Updated RM 2.3 files based on EN-rev92865
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@93152 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nl.properties
+++ b/rm-share/config/alfresco/messages/rm_nl.properties
@@ -11,8 +11,8 @@ page.rmAudit.title=Auditlog
 page.rmAudit.description=Auditlogpagina
 page.rmNewReference.title=Nieuwe verwijzing
 page.rmNewReference.description=Nieuwe verwijzing tussen records
-page.rmDispositionEdit.title=Bewaarschema bewerken
-page.rmDispositionEdit.description=Pagina voor bewerken van het bewaarschema
+page.rmDispositionEdit.title=Beschikkingsschema bewerken
+page.rmDispositionEdit.description=Pagina voor bewerken van het beschikkingsschema
 page.rmPermissions.title=Rechten beheren
 page.rmPermissions.description=Pagina voor beheren van rechten
 page.rmConsole.title=Record Management-console
@@ -33,8 +33,9 @@ label.set.record=Record
 label.set.correspondence=Correspondentie
 label.set.security=Beveiliging
 label.set.vitalRecord=Vitale record
-label.set.disposition=Bewaarschema
+label.set.disposition=Beschikkingsschema
 label.set.customMetadata=Aangepaste eigenschappen
+label.set.recordVersion=Recordversie
 label.hold.reason=Reden
 label.hold.delete.empty=Wachtstand verwijderen indien leeg
 label.recordLevelDisposition=Toegepast op
@@ -46,19 +47,21 @@ label.seriesIdentifier=Identificatie recordreeks
 label.categoryIdentifier=Identificatie recordcategorie
 label.folderIdentifier=Identificatie archiefmap
 label.recordIdentifier=Identificatie record
-label.dispositionInstructions=Archiveringsinstructies
-label.dispositionAsOfDate=Begindatum archivering
+label.dispositionInstructions=Beschikkingsinstructies
+label.dispositionAsOfDate=Begindatum beschikking
 label.physicalSize=Fysieke grootte
 label.numberOfCopies=Aantal exemplaren
 label.storageLocation=Opslaglocatie
 label.shelf=Plank
-label.file=Bestand
+label.file=Archiveren
 label.box=Doos
+label.versionDescription=Beschrijving van versie
+label.VersionLabel=Label voor versie
 
 ## Common Property Selector
 label.menu.content=Content
 label.menu.records=Record
-label.menu.disposition=Bewaarschema
+label.menu.disposition=Beschikkingsschema
 label.menu.specialtypes=Speciale types
 label.menu.imap=IMAP
 label.menu.custom=Aangepaste eigenschappen
@@ -67,7 +70,7 @@ label.menu.custom=Aangepaste eigenschappen
 button.reject.record=Record afwijzen
 button.request-info=Informatie aanvragen
 
-##\ufffdPop-up Messages
+##?Pop-up Messages
 message.confirm.delete.title=Verwijderingsbevestiging
 message.confirm.delete=Weet u zeker dat u ''{0}'' wilt verwijderen?
 message.confirm.destroy.title=Vernietigingsbevestiging
@@ -87,6 +90,10 @@ message.request-info-success=Informatie aangevraagd
 message.request-info-failure=Er is een fout opgetreden tijdens de informatie-aanvraag
 message.confirm.delete-hold.title=Wachtstand verwijderen
 message.confirm.delete-hold=Weet u zeker dat u ''{0}'' wilt verwijderen?
+message.confirm.close-rejected-record.title=Bevestigen
+message.confirm.close-rejected-record=Weet u zeker dat u de afgewezen-recordwaarschuwing wilt verwijderen?
+message.confirm.unlink.title=Bevestiging van koppelingsopheffing
+message.confirm.unlink.text=Weet u zeker dat u de recordkoppeling wilt opheffen?
 
 ## Admin Console
 message.admin-console-access-denied=U moet extra rechten hebben om deze pagina te kunnen openen.
@@ -106,12 +113,13 @@ actions.destroy=Vernietigen
 actions.download=Downloaden
 actions.download-zip=Zip downloaden
 actions.edit-details=Metagegevens bewerken
-actions.edit-disposition-as-of-date=Archiveringsdatum bewerken
-actions.edit-disposition-schedule=Bewaarschema bewerken
+actions.edit-disposition-as-of-date=Beschikkingsdatum bewerken
+actions.edit-disposition-schedule=Beschikkingsschema bewerken
 actions.edit-reason=Details van wachtstand bewerken
 actions.edit-review-as-of-date=Revisiedatum bewerken
 actions.file-report=Rapport archiveren
 actions.link-to=Koppelen naar...
+actions.unlink-from=Recordkoppeling opheffen
 actions.file-to=Archiveren in...
 actions.manage-permissions=Rechten beheren
 actions.move-to=Verplaatsen naar...
@@ -124,11 +132,12 @@ actions.transfer=Overzetten
 actions.transfer-complete=Overzetting afronden
 actions.undeclare=Record heropenen
 actions.undo-cutoff=Afsluiten ongedaan maken
-actions.create-disposition-schedule=Bewaarschema maken
+actions.create-disposition-schedule=Beschikkingsschema maken
 actions.upload-new-version=Nieuwe versie uploaden
 actions.view-details=Details weergeven
 actions.view-audit-log=Auditlog weergeven
 actions.create-record=Declareren als record
+actions.declare-as-version-record=Declareren als versierecord
 actions.hide-record=Record verbergen
 actions.reject=Afwijzen
 actions.request-info=Informatie aanvragen
@@ -139,6 +148,9 @@ actions.delete.hold=Wachtstand verwijderen
 actions.add-to-hold=Toevoegen aan wachtstand
 actions.remove-from-hold=Verwijderen uit wachtstand
 actions.file-hold-report=Wachtstandrapport genereren
+actions.move-dm-record=Record verplaatsen
+actions.recorded-version-config=Opties voor automatisch declareren
+actions.add-relationship=Relatie toevoegen
 
 ## File Plan Action Outcomes
 message.multi-select={0} geselecteerde onderdelen
@@ -157,9 +169,9 @@ message.delete.failure=Kon ''{0}'' niet verwijderen
 message.delete.success=''{0}'' verwijderd
 message.destroy.failure=Kon ''{0}'' niet vernietigen
 message.destroy.success=''{0}'' vernietigd
-message.edit-disposition-as-of-date.title=Archiveringsdatum bewerken
-message.edit-disposition-as-of-date.failure=Kon begindatum van archivering niet bijwerken
-message.edit-disposition-as-of-date.success=Begindatum van archivering voor ''{0}'' bijgewerkt
+message.edit-disposition-as-of-date.title=Beschikkingsdatum bewerken
+message.edit-disposition-as-of-date.failure=Kon begindatum van beschikking niet bijwerken
+message.edit-disposition-as-of-date.success=Begindatum van beschikking voor ''{0}'' bijgewerkt
 message.edit-hold.reason.label=Reden:
 message.edit-hold.title=Details wachtstand bijwerken
 message.edit-hold.failure=Kon details van wachtstand niet bijwerken
@@ -183,12 +195,12 @@ message.undeclare.failure=Kon ''{0}'' niet heropenen
 message.undeclare.success=''{0}'' is niet langer een afgeronde record
 message.undo-cutoff.failure=Kon afsluiten van ''{0}'' niet ongedaan maken
 message.undo-cutoff.success=Afsluiten van ''{0}'' ongedaan maken
-message.create-disposition-schedule.failure=Kon geen bewaarschema voor ''{0}'' maken
-message.create-disposition-schedule.success=Bewaarschema voor ''{0}'' gecre\u00eberd
+message.create-disposition-schedule.failure=Kon geen beschikkingsschema voor ''{0}'' maken
+message.create-disposition-schedule.success=Beschikkingsschema voor ''{0}'' gecre\u00eberd
 message.create-record.success=Als record gedeclareerd
 message.create-record.failure=Declareren als record mislukt
-message.hide-record.success=Record verborgen
-message.hide-record.failure=Kon record niet verbergen
+message.hide-record.success=Record ''{0}'' is verborgen
+message.hide-record.failure=Kon record ''{0}'' niet verbergen
 message.reject.reason=Reden:
 message.reject.title=Reden voor afwijzing
 message.reject.failure=Kon ''{0}'' niet afwijzen
@@ -203,6 +215,12 @@ message.file-hold-report.failure=Kon geen wachtstandrapport genereren
 message.file-hold-report.success=Wachtstandrapport gegenereerd
 message.delete-hold.failure=Kan wachtstand niet verwijderen
 message.delete-hold.success=Wachtstand verwijderd
+message.moveDmRecord.failure=Kon record ''{0}'' niet verplaatsen
+message.moveDmRecord.success=Record ''{0}'' is verplaatst
+message.recordedVersionConfig.success=Opties voor automatisch declareren zijn ingesteld
+message.recordedVersionConfig.failure=Opties voor automatisch declareren kunnen niet worden ingesteld
+message.unlink.success=Recordkoppeling is opgeheven
+message.unlink.failure=Kon recordkoppeling niet opheffen
 
 ## File Plan Status Indicators
 status.rm-accession=Overdracht in behandeling
@@ -219,13 +237,17 @@ status.rm-transferred=Overgezet
 status.rm-vital-record=Vitale record
 status.rm-rejected-record=Afgewezen
 status.rm-info-requested=Informatie gevraagd
-status.rm-disposition-schedule=Er is een bewaarschema gedefinieerd voor recordcategorie
+status.rm-disposition-schedule=Er is een beschikkingsschema gedefinieerd voor recordcategorie
 status.rm-digital-photograph-record=Digitale fotorecord
 status.rm-pdf-record=Pdf-record
 status.rm-scanned-record=Gescande record
 status.rm-web-record=Web-record
 status.rm-is-record=Record
 status.rules=Op map zijn regels toegepast
+status.rm-version-record=Versierecord
+## Document Library Status Indicators
+status.rm-recorded-version-history-all-revisions=Alle revisies worden vastgelegd
+status.rm-recorded-version-history-major-revisions=Alleen primaire revisies worden vastgelegd
 # Exif
 status.exif=EXIF-metagegevens beschikbaar
 
@@ -338,8 +360,8 @@ details.description=Beschrijving
 details.description.none=(Geen)
 # Record Category
 details.category.identifier=Identificatie recordcategorie
-details.category.disposition-authority=Archiveringsautoriteit
-details.category.disposition-instructions=Archiveringsinstructies
+details.category.disposition-authority=Beschikkingsautoriteit
+details.category.disposition-instructions=Beschikkingsinstructies
 details.category.vital-record-indicator=Indicator vitale record
 # Record Folder
 details.folder.identifier=Identificatie archiefmap
@@ -350,8 +372,11 @@ details.record.date-filed=Datum gearchiveerd
 details.record.publication-date=Publicatiedatum
 details.record.originator=Herkomst
 details.record.originating-organization=Oorspronkelijke organisatie
+details.version.label=Versie
 # Incomplete Record
 details.undeclared-record.info=Niet-afgeronde record
+# Rejected Record
+details.rejected-record.info=Afgewezen record
 # Transfer Container
 details.transfer-container.title={0} overzetten
 details.transfer-container.is-accession=<em>Opmerking:</em> overzettingstype is Overdracht
@@ -375,12 +400,6 @@ tip.insitu-tag=Tag
 
 ## Help panels, including Drag and Drop
 show.folders={0} submap(pen) weergeven
-
-details.undeclared-record.info=Niet-afgeronde record
-details.rejected-record.info=Afgewezen record
-details.record.identifier=Unieke identificatie record
-details.record.originator=Herkomst
-details.record.originating-organization=Oorspronkelijke organisatie
 
 ## Create site dialog
 description.recordsManagementSite=Locatie Record Management
@@ -453,4 +472,8 @@ file-to.substitution.date.month.number.label=Maandnummer (bijv. 01)
 file-to.substitution.date.year.short.label=Jaar kort (bijv. 14)
 file-to.substitution.date.year.label=Jaar (bijv. 14)
 file-to.substitution.date.year.long.label=Jaar lang (bijv. 2014)
-file-to.substitution.date.year.week.label=Weeknummer (bijv. 31)
+file-to.substitution.date.year.week.label=Week van het jaar (bijv. 31)
+
+## Banner icon messages
+banner.rejected-record.info=Raadpleeg informatie over de afgewezen record
+banner.rejected-record.close=De afgewezen-recordwaarschuwing verwijderen
