--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_nl.properties
@@ -1,4 +1,4 @@
-header=Opties voor automatisch declareren van versies instellen
+header=Opties voor automatisch declareren instellen
 label.recorded-versions=Versies automatisch declareren als records
 option.none.displayValue=Nooit
 option.major_only.displayValue=Alleen voor primaire versies
