--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_nl.properties
@@ -20,9 +20,11 @@ message.create-failure=Kon nieuwe aangepaste eigenschap niet toevoegen: {0}
 message.edit-success=Aangepaste eigenschap opgeslagen.
 message.edit-failure=Kon aangepaste eigenschap niet opslaan: {0}
 message.delete.title=Aangepaste eigenschap verwijderen
-message.delete.text=Weet u zeker dat u {0} wilt verwijderen?
+message.delete.text=Weet u zeker dat u het volgende wilt verwijderen: {0}?
 message.delete-success=Aangepaste eigenschap verwijderd.
 message.delete-failure=Kon aangepaste eigenschap niet verwijderen: {0}
 
 mandatory.true=Waar
 mandatory.false=Onwaar
+
+button.new.custom-metadata=Nieuw
