ITALIAN: Updated RM 2.3 files based on EN-rev92865
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@93154 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_it.properties
+++ b/rm-share/config/alfresco/messages/rm_it.properties
@@ -35,6 +35,7 @@ label.set.security=Sicurezza
 label.set.vitalRecord=Record fondamentale
 label.set.disposition=Pianificazione della disposizione
 label.set.customMetadata=Propriet\u00e0 personalizzate
+label.set.recordVersion=Versione record
 label.hold.reason=Motivo
 label.hold.delete.empty=Annulla sospensione quando vuoto
 label.recordLevelDisposition=Applicato a
@@ -54,6 +55,8 @@ label.storageLocation=Posizione di archiviazione
 label.shelf=Ripiano
 label.file=File
 label.box=Casella
+label.versionDescription=Descrizione versione
+label.VersionLabel=Etichetta versione
 
 ## Common Property Selector
 label.menu.content=Contenuto
@@ -67,7 +70,7 @@ label.menu.custom=Propriet\u00e0 personalizzate
 button.reject.record=Respingi record
 button.request-info=Richiedi informazioni
 
-##\ufffdPop-up Messages
+##?Pop-up Messages
 message.confirm.delete.title=Conferma di eliminazione
 message.confirm.delete=Procedere con l''eliminazione di ''{0}''?
 message.confirm.destroy.title=Conferma di eliminazione definitiva
@@ -79,7 +82,7 @@ message.confirm2.destroyMultiple=Il contenuto dei file sar\u00e0 eliminato in ma
 message.confirm.hide.record.title=Nascondi record
 message.confirm.hide.record=Si sta nascondendo il record e non sar\u00e0 pi\u00f9 possibile visualizzarlo all'interno del sito di collaborazione.
 message.select=Seleziona...
-message.pdf-record-fonts.title=Record PDF: controllo dei caratteri incorporati
+message.pdf-record-fonts.title=Record PDF: Controllo dei caratteri incorporati
 message.pdf-record-fonts.accession=Controllare che tutti i record PDF appena inseriti includano i caratteri incorporati applicabili.
 message.pdf-record-fonts.transfer=Controllare che tutti i record PDF appena trasferiti includano i caratteri incorporati applicabili.
 message.pdf-record-fonts.unknown=Se il trasferimento o l'inserimento ha interessato record PDF, \u00e8 necessario controllare che siano stati inclusi i caratteri incorporati applicabili.
@@ -87,6 +90,10 @@ message.request-info-success=Richiesta di informazioni riuscita
 message.request-info-failure=Si \u00e8 verificato un errore durante la richiesta di informazioni
 message.confirm.delete-hold.title=Annulla sospensione
 message.confirm.delete-hold=Procedere con l''eliminazione di ''{0}''?
+message.confirm.close-rejected-record.title=Conferma
+message.confirm.close-rejected-record=Procedere con la rimozione dell'avviso del record respinto?
+message.confirm.unlink.title=Scollega conferma
+message.confirm.unlink.text=Procedere con lo scollegamento del record?
 
 ## Admin Console
 message.admin-console-access-denied=\u00c8 necessario disporre di permessi aggiuntivi per accedere a questa pagina.
@@ -112,6 +119,7 @@ actions.edit-reason=Modifica dettagli sospensione
 actions.edit-review-as-of-date=Modifica data di revisione
 actions.file-report=Archivia report
 actions.link-to=Collega a...
+actions.unlink-from=Scollega record
 actions.file-to=Archivia su...
 actions.manage-permissions=Gestisci permessi
 actions.move-to=Sposta in...
@@ -129,16 +137,20 @@ actions.upload-new-version=Carica nuova versione
 actions.view-details=Vedi dettagli
 actions.view-audit-log=Visualizza log di audit
 actions.create-record=Dichiara come record
+actions.declare-as-version-record=Dichiara come record versione
 actions.hide-record=Nascondi record
 actions.reject=Respingi
 actions.request-info=Richiedi informazioni
 actions.file-destruction-report=Genera report di eliminazione permanente
 actions.end-retention=Termina conservazione
-action.edit.hold=Modifica tempo di sospensione
+action.edit.hold=Modifica sospensione
 actions.delete.hold=Annulla sospensione
 actions.add-to-hold=Aggiungi a sospesi
 actions.remove-from-hold=Rimuovi da sospesi
 actions.file-hold-report=Genera report di sospensione
+actions.move-dm-record=Sposta record
+actions.recorded-version-config=Opzioni di dichiarazione automatica
+actions.add-relationship=Aggiungi relazione
 
 ## File Plan Action Outcomes
 message.multi-select={0} elementi selezionati
@@ -187,8 +199,8 @@ message.create-disposition-schedule.failure=Impossibile creare pianificazione de
 message.create-disposition-schedule.success=Pianificazione della disposizione per ''{0}'' creata
 message.create-record.success=Dichiarazione come record riuscita
 message.create-record.failure=Impossibile dichiarare come record
-message.hide-record.success=Record nascosto
-message.hide-record.failure=Impossibile nascondere record
+message.hide-record.success=Record ''{0}'' nascosto correttamente.
+message.hide-record.failure=Impossibile nascondere il record ''{0}''
 message.reject.reason=Motivo:
 message.reject.title=Motivo del rifiuto
 message.reject.failure=Impossibile respingere ''{0}''
@@ -203,6 +215,12 @@ message.file-hold-report.failure=Impossibile generare report di sospensione
 message.file-hold-report.success=Report di sospensione generato
 message.delete-hold.failure=Impossibile cancellare la sospensione
 message.delete-hold.success=Sospensione cancellata
+message.moveDmRecord.failure=Impossibile spostare il record ''{0}''
+message.moveDmRecord.success=Record ''{0}'' spostato correttamente.
+message.recordedVersionConfig.success=Opzioni di dichiarazione automatica impostate correttamente
+message.recordedVersionConfig.failure=Impossibile impostare le opzioni di dichiarazione automatica
+message.unlink.success=Scollegamento record riuscito
+message.unlink.failure=Impossibile scollegare il record
 
 ## File Plan Status Indicators
 status.rm-accession=Inserimento in sospeso
@@ -226,6 +244,10 @@ status.rm-scanned-record=Record scansionato
 status.rm-web-record=Record Web
 status.rm-is-record=Record
 status.rules=Regole applicate su cartella
+status.rm-version-record=Record versione
+## Document Library Status Indicators
+status.rm-recorded-version-history-all-revisions=Tutte le revisioni saranno registrate
+status.rm-recorded-version-history-major-revisions=Saranno registrate solo le revisioni maggiori
 # Exif
 status.exif=Metadati EXIF disponibili
 
@@ -328,9 +350,9 @@ menu.select.recordCategories=Categorie record
 
 ## Metadata Fields
 # Generic
-details.created.on=Creato
+details.created.on=Creato su
 details.created.by=Creato da
-details.modified.on=Modificato
+details.modified.on=Modificato su
 details.modified.by=Modificato da
 details.by=Da
 details.size=Dimensioni
@@ -350,14 +372,17 @@ details.record.date-filed=Data di archiviazione
 details.record.publication-date=Data di pubblicazione
 details.record.originator=Iniziatore
 details.record.originating-organization=Organizzazione di origine
+details.version.label=Versione
 # Incomplete Record
 details.undeclared-record.info=Record incompleto
+# Rejected Record
+details.rejected-record.info=Record respinto
 # Transfer Container
 details.transfer-container.title=Trasferisci {0}
 details.transfer-container.is-accession=<em>Nota:</em> il tipo di trasferimento \u00e8 l'inserimento
 # Hold Container
 details.hold.title=Sospensione creata su {0}
-details.hold.title.date-format=gg mmmm aaaa 'alle' HH:MM:ss
+details.hold.title.date-format=dd mmmm yyyy 'alle' HH:MM:ss
 details.hold.reason=Motivo sospensione
 details.hold.reason.none=Non disponibile
 # Unfiled Records Container Child
@@ -375,12 +400,6 @@ tip.insitu-tag=Tag
 
 ## Help panels, including Drag and Drop
 show.folders=Mostra {0} sottocartelle
-
-details.undeclared-record.info=Record incompleto
-details.rejected-record.info=Record respinto
-details.record.identifier=Identificatore record univoco
-details.record.originator=Iniziatore
-details.record.originating-organization=Organizzazione di origine
 
 ## Create site dialog
 description.recordsManagementSite=Sito di gestione dei record
@@ -454,3 +473,7 @@ file-to.substitution.date.year.short.label=Abbreviazione anno (ad es. 14)
 file-to.substitution.date.year.label=Anno (ad es. 14)
 file-to.substitution.date.year.long.label=Anno per esteso (ad es. 2014)
 file-to.substitution.date.year.week.label=Settimana dell'anno (ad es. 31)
+
+## Banner icon messages
+banner.rejected-record.info=Vedere le informazioni sul record respinto
+banner.rejected-record.close=Rimuovere la registrazione dell'avviso di record respinto.
