--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_it.properties
@@ -1,11 +1,7 @@
 label.list.no.data.message=Non ci sono relazioni definite
 label.toolbar.relationships=Relazioni
 label.button.new-relationship=Aggiungi nuova relazione
-label.title.new-relationship=Nuova relazione
-label.button.select-record=Seleziona record
-label.button.create=Crea
-label.button.cancel=Annulla
-label.alt.text.delete-relationship=Elimina ''{0}''
 label.confirmation.title.delete-relationship=Elimina relazione
 label.confirmationPrompt.delete-relationship=Procedere con l''eliminazione di ''{node.properties.cm:name}''?
-label.delete-relationship.successMessage=Eliminazione ''{node.properties.cm:name}'' riuscita
+label.delete-relationship=Elimina relazione
+label.delete-relationship.successMessage=Eliminazione di ''{node.properties.cm:name}'' riuscita
