--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_it.properties
@@ -26,3 +26,5 @@ message.delete-failure=Impossibile eliminare propriet\u00e0 personalizzata: {0}
 
 mandatory.true=Vero
 mandatory.false=Falso
+
+button.new.custom-metadata=Nuovo
