--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_it.properties
@@ -1,4 +1,4 @@
-header=Imposta opzioni di dichiarazione automatica versioni
+header=Imposta opzioni di dichiarazione automatica
 label.recorded-versions=Dichiara automaticamente versioni come record
 option.none.displayValue=Mai
 option.major_only.displayValue=Solo per versioni maggiori
