NORWEGIAN (Bokmal): Updated RM 2.3 files based on EN-rev92865
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@93157 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nb.properties
+++ b/rm-share/config/alfresco/messages/rm_nb.properties
@@ -92,6 +92,8 @@ message.confirm.delete-hold.title=Slett hold
 message.confirm.delete-hold=Er du sikker p\u00e5 at du vil slette ''{0}''?
 message.confirm.close-rejected-record.title=Bekreft
 message.confirm.close-rejected-record=Er du sikker p\u00e5 at du vil fjerne den avviste oppf\u00f8ringsadvarselen?
+message.confirm.unlink.title=Koble fra bekreftelsen
+message.confirm.unlink.text=Er du sikker p\u00e5 at du vil koble fra oppf\u00f8ringen?
 
 ## Admin Console
 message.admin-console-access-denied=Du trenger flere tillatelser for \u00e5 kunne g\u00e5 til denne siden.
@@ -117,6 +119,7 @@ actions.edit-reason=Rediger informasjon om hold
 actions.edit-review-as-of-date=Rediger gjennomgang av dato
 actions.file-report=Registrer rapport
 actions.link-to=Koble til...
+actions.unlink-from=Koble fra oppf\u00f8ring
 actions.file-to=Registrer i...
 actions.manage-permissions=Administrer tillatelser
 actions.move-to=Flytt til...
@@ -134,6 +137,7 @@ actions.upload-new-version=Last opp ny versjon
 actions.view-details=Vis detaljer
 actions.view-audit-log=Vis revisjonslogg
 actions.create-record=Erkl\u00e6r som oppf\u00f8ring
+actions.declare-as-version-record=Erkl\u00e6r som versjonsoppf\u00f8ring
 actions.hide-record=Skjul oppf\u00f8ring
 actions.reject=Avvis
 actions.request-info=Be om informasjon
@@ -146,6 +150,7 @@ actions.remove-from-hold=Fjern fra hold
 actions.file-hold-report=Generer holdrapport
 actions.move-dm-record=Flytt oppf\u00f8ring
 actions.recorded-version-config=Alternativer med automatiske erkl\u00e6ringer
+actions.add-relationship=Legg til forhold
 
 ## File Plan Action Outcomes
 message.multi-select={0} valgte elementer
@@ -214,6 +219,8 @@ message.moveDmRecord.failure=Kunne ikke flytte oppf\u00f8ringen ''{0}''
 message.moveDmRecord.success=Oppf\u00f8ringen ''{0}'' er n\u00e5 flyttet
 message.recordedVersionConfig.success=Alternativer med automatiske erkl\u00e6ringer er n\u00e5 stilt inn
 message.recordedVersionConfig.failure=Kunne ikke stille inn alternativer med automatiske erkl\u00e6ringer
+message.unlink.success=Oppf\u00f8ring er n\u00e5 frakoblet
+message.unlink.failure=Kunne ikke koble fra oppf\u00f8ringen
 
 ## File Plan Status Indicators
 status.rm-accession=Ventestatus p\u00e5 tilgang
@@ -350,7 +357,7 @@ details.modified.by=Endret av
 details.by=Av
 details.size=St\u00f8rrelse
 details.description=Beskrivelse
-details.description.none=(ingen)
+details.description.none=(Ingen)
 # Record Category
 details.category.identifier=Oppf\u00f8ringskategori-ID
 details.category.disposition-authority=Disposisjonsrett
