--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_nb.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get_nb.properties
@@ -1,4 +1,4 @@
-header=Still inn alternativene med automatiske erkl\u00e6ringer
+header=Still inn alternativer med automatiske erkl\u00e6ringer
 label.recorded-versions=Erkl\u00e6rer alternativene med automatiske erkl\u00e6ringer som oppf\u00f8ringer
 option.none.displayValue=Aldri
 option.major_only.displayValue=Kun hovedversjoner
