SIMPLIFIED CHINESE: Updated RM 2.3 files based on EN-rev92865
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@93161 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -35,6 +35,7 @@ label.set.security=\u5b89\u5168\u6027
 label.set.vitalRecord=\u6838\u5fc3\u8bb0\u5f55
 label.set.disposition=\u5904\u7f6e\u8ba1\u5212
 label.set.customMetadata=\u81ea\u5b9a\u4e49\u5c5e\u6027
+label.set.recordVersion=\u8bb0\u5f55\u7248\u672c
 label.hold.reason=\u539f\u56e0
 label.hold.delete.empty=\u7a7a\u65f6\u5220\u9664\u4fdd\u5b58
 label.recordLevelDisposition=\u9002\u7528\u4e8e
@@ -54,6 +55,8 @@ label.storageLocation=\u5b58\u50a8\u4f4d\u7f6e
 label.shelf=\u6258\u67b6
 label.file=\u6587\u4ef6
 label.box=\u7bb1
+label.versionDescription=\u7248\u672c\u8bf4\u660e
+label.VersionLabel=\u7248\u672c\u6807\u7b7e
 
 ## Common Property Selector
 label.menu.content=\u5185\u5bb9
@@ -67,7 +70,7 @@ label.menu.custom=\u81ea\u5b9a\u4e49\u5c5e\u6027
 button.reject.record=\u62d2\u7edd\u8bb0\u5f55
 button.request-info=\u8bf7\u6c42\u4fe1\u606f
 
-##\ufffdPop-up Messages
+##?Pop-up Messages
 message.confirm.delete.title=\u5220\u9664\u786e\u8ba4
 message.confirm.delete=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664 ''{0}''\uff1f
 message.confirm.destroy.title=\u9500\u6bc1\u786e\u8ba4
@@ -87,6 +90,10 @@ message.request-info-success=\u5df2\u6210\u529f\u8bf7\u6c42\u4fe1\u606f
 message.request-info-failure=\u5728\u8bf7\u6c42\u4fe1\u606f\u65f6\u51fa\u9519
 message.confirm.delete-hold.title=\u5220\u9664\u4fdd\u5b58
 message.confirm.delete-hold=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664 ''{0}''\uff1f
+message.confirm.close-rejected-record.title=\u786e\u8ba4
+message.confirm.close-rejected-record=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664\u62d2\u7edd\u7684\u8bb0\u5f55\u8b66\u544a\uff1f
+message.confirm.unlink.title=\u53d6\u6d88\u786e\u8ba4\u7684\u94fe\u63a5
+message.confirm.unlink.text=\u662f\u5426\u786e\u5b9a\u8981\u53d6\u6d88\u8bb0\u5f55\u7684\u94fe\u63a5\uff1f
 
 ## Admin Console
 message.admin-console-access-denied=\u8981\u8bbf\u95ee\u8be5\u9875\u9762\uff0c\u60a8\u9700\u8981\u989d\u5916\u7684\u6743\u9650\u3002
@@ -112,6 +119,7 @@ actions.edit-reason=\u7f16\u8f91\u4fdd\u5b58\u8be6\u7ec6\u4fe1\u606f
 actions.edit-review-as-of-date=\u7f16\u8f91\u5ba1\u67e5\u65e5\u671f
 actions.file-report=\u7acb\u5377\u62a5\u544a
 actions.link-to=\u94fe\u63a5\u5230...
+actions.unlink-from=\u53d6\u6d88\u8bb0\u5f55\u7684\u94fe\u63a5
 actions.file-to=\u7acb\u5377\u81f3...
 actions.manage-permissions=\u7ba1\u7406\u6743\u9650
 actions.move-to=\u79fb\u52a8\u5230...
@@ -129,6 +137,7 @@ actions.upload-new-version=\u4e0a\u4f20\u65b0\u7248\u672c
 actions.view-details=\u67e5\u770b\u8be6\u7ec6\u4fe1\u606f
 actions.view-audit-log=\u67e5\u770b\u5ba1\u8ba1\u65e5\u5fd7
 actions.create-record=\u58f0\u660e\u4e3a\u8bb0\u5f55
+actions.declare-as-version-record=\u58f0\u660e\u4e3a\u7248\u672c\u8bb0\u5f55
 actions.hide-record=\u9690\u85cf\u8bb0\u5f55
 actions.reject=\u62d2\u7edd
 actions.request-info=\u8bf7\u6c42\u4fe1\u606f
@@ -139,6 +148,9 @@ actions.delete.hold=\u5220\u9664\u4fdd\u5b58
 actions.add-to-hold=\u52a0\u5165\u4fdd\u5b58
 actions.remove-from-hold=\u89e3\u9664\u4fdd\u5b58
 actions.file-hold-report=\u751f\u6210\u4fdd\u5b58\u62a5\u544a
+actions.move-dm-record=\u79fb\u52a8\u8bb0\u5f55
+actions.recorded-version-config=\u81ea\u52a8\u58f0\u660e\u9009\u9879
+actions.add-relationship=\u6dfb\u52a0\u5173\u7cfb
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u4e2a\u6240\u9009\u9879\u76ee
@@ -187,8 +199,8 @@ message.create-disposition-schedule.failure=\u65e0\u6cd5\u521b\u5efa ''{0}'' \u7
 message.create-disposition-schedule.success=\u5df2\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8ba1\u5212
 message.create-record.success=\u5df2\u6210\u529f\u58f0\u660e\u4e3a\u8bb0\u5f55
 message.create-record.failure=\u65e0\u6cd5\u58f0\u660e\u4e3a\u8bb0\u5f55
-message.hide-record.success=\u8bb0\u5f55\u5df2\u9690\u85cf
-message.hide-record.failure=\u65e0\u6cd5\u9690\u85cf\u8bb0\u5f55
+message.hide-record.success=\u5df2\u6210\u529f\u9690\u85cf\u8bb0\u5f55 ''{0}''
+message.hide-record.failure=\u65e0\u6cd5\u9690\u85cf\u8bb0\u5f55 ''{0}''
 message.reject.reason=\u539f\u56e0\uff1a
 message.reject.title=\u62d2\u7edd\u539f\u56e0
 message.reject.failure=\u65e0\u6cd5\u62d2\u7edd ''{0}''
@@ -203,6 +215,12 @@ message.file-hold-report.failure=\u65e0\u6cd5\u751f\u6210\u4fdd\u5b58\u62a5\u544
 message.file-hold-report.success=\u5df2\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 message.delete-hold.failure=\u65e0\u6cd5\u5220\u9664\u4fdd\u5b58 
 message.delete-hold.success=\u4fdd\u5b58\u5df2\u88ab\u5220\u9664
+message.moveDmRecord.failure=\u65e0\u6cd5\u79fb\u52a8\u8bb0\u5f55 ''{0}''
+message.moveDmRecord.success=\u5df2\u6210\u529f\u79fb\u52a8\u8bb0\u5f55 ''{0}''
+message.recordedVersionConfig.success=\u5df2\u6210\u529f\u8bbe\u7f6e\u81ea\u52a8\u58f0\u660e\u9009\u9879
+message.recordedVersionConfig.failure=\u65e0\u6cd5\u8bbe\u7f6e\u81ea\u52a8\u58f0\u660e\u9009\u9879
+message.unlink.success=\u5df2\u6210\u529f\u53d6\u6d88\u8bb0\u5f55\u7684\u94fe\u63a5
+message.unlink.failure=\u65e0\u6cd5\u53d6\u6d88\u8bb0\u5f55\u7684\u94fe\u63a5
 
 ## File Plan Status Indicators
 status.rm-accession=\u5165\u7ba1\u6302\u8d77
@@ -226,6 +244,10 @@ status.rm-scanned-record=\u626b\u63cf\u7684\u8bb0\u5f55
 status.rm-web-record=Web \u8bb0\u5f55
 status.rm-is-record=\u8bb0\u5f55
 status.rules=\u5df2\u7ecf\u4e3a\u6587\u4ef6\u5939\u5e94\u7528\u4e86\u89c4\u5219
+status.rm-version-record=\u7248\u672c\u8bb0\u5f55
+## Document Library Status Indicators
+status.rm-recorded-version-history-all-revisions=\u5c06\u8bb0\u5f55\u6240\u6709\u4fee\u8ba2
+status.rm-recorded-version-history-major-revisions=\u53ea\u4f1a\u8bb0\u5f55\u4e3b\u8981\u4fee\u8ba2
 # Exif
 status.exif=EXIF \u5143\u6570\u636e\u53ef\u7528
 
@@ -350,8 +372,11 @@ details.record.date-filed=\u7acb\u5377\u65e5\u671f
 details.record.publication-date=\u53d1\u5e03\u65e5\u671f
 details.record.originator=\u5efa\u7acb\u8005
 details.record.originating-organization=\u8d77\u59cb\u7ec4\u7ec7
+details.version.label=\u7248\u672c
 # Incomplete Record
 details.undeclared-record.info=\u4e0d\u5b8c\u6574\u7684\u8bb0\u5f55
+# Rejected Record
+details.rejected-record.info=\u62d2\u7edd\u7684\u8bb0\u5f55
 # Transfer Container
 details.transfer-container.title=\u79fb\u4ea4 {0}
 details.transfer-container.is-accession=<em>\u6ce8\uff1a</em>\u79fb\u4ea4\u7c7b\u578b\u4e3a\u5165\u7ba1
@@ -375,12 +400,6 @@ tip.insitu-tag=\u6807\u8bb0
 
 ## Help panels, including Drag and Drop
 show.folders=\u663e\u793a {0} \u4e2a\u5b50\u6587\u4ef6\u5939
-
-details.undeclared-record.info=\u4e0d\u5b8c\u6574\u7684\u8bb0\u5f55
-details.rejected-record.info=\u62d2\u7edd\u7684\u8bb0\u5f55
-details.record.identifier=\u552f\u4e00\u8bb0\u5f55\u6807\u8bc6\u7b26
-details.record.originator=\u5efa\u7acb\u8005
-details.record.originating-organization=\u8d77\u59cb\u7ec4\u7ec7
 
 ## Create site dialog
 description.recordsManagementSite=\u8bb0\u5f55\u7ba1\u7406\u7ad9\u70b9
@@ -453,4 +472,8 @@ file-to.substitution.date.month.number.label=\u6708\u4efd\u7f16\u53f7\uff08\u4f8
 file-to.substitution.date.year.short.label=\u7f29\u5199\u5e74\u4efd\uff08\u4f8b\u5982 14\uff09
 file-to.substitution.date.year.label=\u5e74\uff08\u4f8b\u5982 14 \u5e74\uff09
 file-to.substitution.date.year.long.label=\u5168\u957f\u5e74\u4efd\uff08\u4f8b\u5982 2014 \u5e74\uff09
-file-to.substitution.date.year.week.label=\u4e00\u5e74\u4e2d\u7684\u7b2c\u51e0\u5468\uff08\u4f8b\u5982\u7b2c 31 \u5468\uff09
+file-to.substitution.date.year.week.label=\u5e74\u5ea6\u7b2c\u51e0\u5468\uff08\u4f8b\u5982\u7b2c 31 \u5468\uff09
+
+## Banner icon messages
+banner.rejected-record.info=\u8bf7\u53c2\u9605\u6709\u5173\u62d2\u7edd\u7684\u8bb0\u5f55\u7684\u4fe1\u606f
+banner.rejected-record.close=\u5220\u9664\u62d2\u7edd\u7684\u8b66\u544a\u8bb0\u5f55
