--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_zh_CN.properties
@@ -26,3 +26,5 @@ message.delete-failure=\u65e0\u6cd5\u5220\u9664\u81ea\u5b9a\u4e49\u5c5e\u6027\uf
 
 mandatory.true=True
 mandatory.false=False
+
+button.new.custom-metadata=\u65b0\u5efa
