--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get_de.properties
@@ -2,6 +2,6 @@ label.list.no.data.message=Es wurden keine Beziehungen definiert
 label.toolbar.relationships=Beziehungen
 label.button.new-relationship=Neue Beziehung hinzuf\u00fcgen
 label.confirmation.title.delete-relationship=Beziehung l\u00f6schen
-label.confirmationPrompt.delete-relationship=M\u00f6chten Sie '{node.properties.cm:name}' wirklich l\u00f6schen?
+label.confirmationPrompt.delete-relationship=M\u00f6chten Sie ''{node.properties.cm:name}'' wirklich l\u00f6schen?
 label.delete-relationship=Beziehung l\u00f6schen
-label.delete-relationship.successMessage='{node.properties.cm:name}' erfolgreich gel\u00f6scht
+label.delete-relationship.successMessage=''{node.properties.cm:name}'' erfolgreich gel\u00f6scht
